# satellite

./: .env.example  .gitignore  CONTRIBUTING.md  DEAD_CODE_REMOVAL_PLAN.md  Makefile  README.md  avoid_this.md  claude.md  loadingbar.md  option_2.md  pyproject.toml  screen_bug.md  submit_bug.md  to_do.md  todo.md
.github/workflows/: ci.yml  claude-review.yml  release.yml  update-evals.yml
docs/: how_to_add_new_evals.md  how_to_make_video.md
future_work/: RE_ENABLE.md  agent_boxes.tcss  agent_item.py  agent_list.py
scripts/: capture_screenshots.py  demo.tape
src/satellite/: __init__.py  __main__.py  app.py  main.tcss
src/satellite/docs/: ARCHITECTURE.md  EXTENDING.md  WIDGET_PATTERNS.md
src/satellite/examples/: __init__.py  eval_data.py
src/satellite/modals/: __init__.py
src/satellite/modals/scripts/: _job_list_mixin.py  env_vars_modal.py  evals_modal.py  job_detail_modal.py  job_list_modal.py  leaderboard_modal.py  set_model_modal.py  submit_modal.py  tabbed_evals_modal.py
src/satellite/modals/styles/: env_vars_modal.tcss  job_detail_modal.tcss  modal_base.tcss
src/satellite/screens/: __init__.py  main.py
src/satellite/services/config/: __init__.py  env_config_manager.py  eval_settings.py
src/satellite/services/evals/: __init__.py  inspect_progress_hook.py  job_manager.py  registry.py  runner.py  worker.py
src/satellite/services/leaderboard/: __init__.py  client.py
src/satellite/services/submit/: __init__.py  parquet_builder.py
src/satellite/widgets/: README.md  __init__.py  badge_label.py  configured_models_list.py  dropdown_button.py  eval_list.py  eval_sub_option.py  evals_container.py  julia_set.py  tab_header.py  tab_item.py
src/satetoad/: __init__.py  __main__.py  app.py  main.tcss
src/satetoad/docs/: ARCHITECTURE.md  EXTENDING.md  WIDGET_PATTERNS.md
src/satetoad/examples/: __init__.py  eval_data.py
src/satetoad/modals/: __init__.py  evals_modal.py  job_detail_modal.py  job_detail_modal.tcss  job_list_modal.py  leaderboard_modal.py  modal_base.tcss  run_evals_modal.py  set_model_modal.py  set_model_modal.tcss  submit_modal.py  tabbed_evals_modal.py
src/satetoad/modals/scripts/: env_vars_modal.py  (+7 more)
src/satetoad/models/: __init__.py  job.py
src/satetoad/screens/: __init__.py  main.py  trajectories.py
src/satetoad/services/: __init__.py  eval_registry.py  huggingface_client.py  job_manager.py  leaderboard_types.py
src/satetoad/widgets/: README.md  __init__.py  agent_item.py  agent_list.py  badge_label.py  checklist_item.py  configured_models_list.py  env_var_item.py  eval_box.py  eval_list.py  eval_sub_option.py  evals_container.py  flash.py  grid_select.py  julia_set.py  tab_header.py  tab_item.py  throbber.py  trajectory_sections.py
tests/: conftest.py  test_app_subprocess_cleanup.py  test_configured_models_list.py  test_entry_points.py  test_makefile_setup.py  test_model_persistence.py  test_provider_categories.py  test_zombie_processes.py
tests/integration/: __init__.py  test_eval_runner.py
tests/modals/: __init__.py  test_eval_freeze.py  test_job_detail_results.py  test_leaderboard_modal.py  test_progress_bar.py  test_run_evals_flow.py  test_stress_interactive.py  test_tabbed_evals_modal.py
tests/services/: test_env_config_sync.py  test_eval_registry.py  test_eval_settings.py  test_eval_subprocess.py  test_eval_worker.py  test_fd_leaks.py  test_github_client.py  test_job_cancellation.py  test_job_manager_resilience.py  test_job_progress_sidecar.py  test_local_leaderboard.py  test_parquet_builder.py  test_submit_eligibility.py
tests/widgets/: __init__.py  test_julia_set_banner.py
(+16 files in other folders)
