[project]
name = "satetoad"
version = "0.1.0"
description = "Minimal TUI Widget Learning Framework - A simplified Toad interface for learning Textual patterns"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=7.5.0",
    "huggingface-hub>=0.20.0",
    "pyarrow>=14.0.0",
    "evals @ git+https://github.com/otelcos/evals.git",
    "inspect-ai",
    "openai>=2.16.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
satetoad = "satetoad.app:main"

[project.optional-dependencies]
dev = [
    "cairosvg>=2.8.2",
    "psutil>=5.9.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "reportlab>=4.4.9",
    "svglib>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/satetoad"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]
