[project]
name = "satellite"
version = "0.1.0"
description = "A TUI for benchmarking LLMs on telecom tasks"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "GSMA" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Communications :: Telephony",
]
dependencies = [
    "textual>=7.5.0",
    "huggingface-hub>=0.20.0",
    "pyarrow>=14.0.0",
    "evals @ git+https://github.com/otelcos/evals.git@faa7c3489",
    "inspect-ai>=0.3.170,<0.4",
    "openai>=2.16.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/gsma-labs/satellite"
Repository = "https://github.com/gsma-labs/satellite"
Issues = "https://github.com/gsma-labs/satellite/issues"

[project.scripts]
satellite = "satellite.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/satellite"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "cairosvg>=2.8.2",
    "psutil>=5.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "reportlab>=4.4.9",
    "ruff>=0.15.0",
    "svglib>=1.6.0",
]
